fix(angular): remove redundant translations peer dependency
- Remove @firebase-ui/translations from Angular package peer dependencies
- Angular package gets translations through core package's peer dependency
- Maintains consistent dependency structure across all packages
- Core declares translations as peer dependency, other packages inherit it

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -24,8 +24,7 @@
   "peerDependencies": {
     "@angular/common": "catalog:peerDependencies",
     "@angular/core": "catalog:peerDependencies",
-    "@firebase-ui/core": "workspace:*",
-    "@firebase-ui/translations": "workspace:*"
+    "@firebase-ui/core": "workspace:*"
   },
   "dependencies": {
     "@tanstack/angular-form": "^1.1.0",
