--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -22,16 +22,14 @@
     "release": "pnpm pack --pack-destination ../../releases/"
   },
   "peerDependencies": {
-    "@angular/common": "catalog:peerDependencies",
-    "@angular/core": "catalog:peerDependencies",
-    "@firebase-ui/core": "workspace:*",
-    "@firebase-ui/translations": "workspace:*"
+    "@angular/fire": "catalog:peerDependencies"
   },
   "dependencies": {
+    "@firebase-ui/core": "workspace:*",
+    "@firebase-ui/styles": "workspace:*",
     "@tanstack/angular-form": "^1.1.0",
     "tslib": "^2.8.1",
-    "nanostores": "catalog:",
-    "firebase": "catalog:"
+    "nanostores": "catalog:"
   },
   "sideEffects": false,
   "devDependencies": {
@@ -45,6 +43,7 @@
     "@angular/compiler-cli": "catalog:",
     "@angular/platform-browser": "catalog:",
     "@angular/platform-browser-dynamic": "catalog:",
+    "firebase": "catalog:",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
