--- a/packages/react/tsconfig.app.json
+++ b/packages/react/tsconfig.app.json
@@ -24,8 +24,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@firebase-ui/core": ["../core/src/index.ts"],
-      "@firebase-ui/styles": ["../styles/src/index.ts"]
+      "@firebase-ui/core": ["../core/src/index.ts"]
     }
   },
   "include": ["src"]
