--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -23,11 +23,11 @@
     "release": "pnpm pack --pack-destination ../../releases/"
   },
   "peerDependencies": {
-    "@angular/fire": "catalog:peerDependencies",
-    "@firebase-ui/translations": "workspace:*"
+    "@angular/fire": "catalog:peerDependencies"
   },
   "dependencies": {
     "@firebase-ui/core": "workspace:*",
+    "@firebase-ui/translations": "workspace:*",
     "@firebase-ui/styles": "workspace:*",
     "@tanstack/angular-form": "^1.1.0",
     "tslib": "^2.8.1",
