refactor(angular): Refactor fui-button

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -30,7 +30,10 @@
   },
   "dependencies": {
     "@tanstack/angular-form": "^1.1.0",
+    "@firebase-ui/styles": "workspace:*",
     "tslib": "^2.8.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.0.1",
     "nanostores": "catalog:",
     "firebase": "catalog:"
   },
