--- a/packages/angular/tsconfig.lib.json
+++ b/packages/angular/tsconfig.lib.json
@@ -11,7 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "@firebase-ui/core": ["../core/src/index.ts"],
-      "@firebase-ui/translations": ["../translations/src/index.ts"]
+      "@firebase-ui/translations": ["../translations/src/index.ts"],
+      "@firebase-ui/styles": ["../styles/src/index.ts"]
     }
   },
   "exclude": ["**/*.spec.ts"]
