chore(*): ran prettier

--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -16,7 +16,9 @@
     "./tailwind": "./src/base.css",
     "./themes/*": "./src/themes/*.css"
   },
-  "sideEffects": ["**/*.css"],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "files": [
     "dist.css",
     "src"
