feat(*): migrate to vitest for angular

--- a/packages/angular/tsconfig.spec.json
+++ b/packages/angular/tsconfig.spec.json
@@ -3,7 +3,7 @@
 {
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "types": ["jasmine", "node"],
+    "types": ["vitest/globals", "node", "@testing-library/jest-dom"],
     "lib": ["es2018", "dom"],
     "target": "es2018",
     "module": "es2020",
@@ -19,5 +19,5 @@
     "declaration": false
   },
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "src/**/*.ts"],
-  "files": ["src/test.ts"]
+  "files": ["src/test-setup.ts"]
 }
