--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -16,9 +16,9 @@
   "scripts": {
     "prepare": "pnpm run build",
     "build": "ng-packagr -p ng-package.json",
-    "test": "ng test --watch=false --browsers=ChromeHeadless --project=firebase-ui-angular",
-    "test:watch": "ng test --watch=true --project=firebase-ui-angular",
-    "test:ci": "ng test --watch=false --browsers=ChromeHeadless --code-coverage --project=firebase-ui-angular",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
     "release": "pnpm pack --pack-destination ../../releases/"
   },
@@ -46,17 +46,15 @@
     "@angular/platform-browser": "catalog:",
     "@angular/platform-browser-dynamic": "catalog:",
     "firebase": "catalog:",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "jasmine-core": "^5.1.0",
-    "@types/jasmine": "^5.1.0",
     "@types/node": "catalog:",
     "zone.js": "catalog:",
     "ng-packagr": "^20.0.0",
     "rxjs": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "^2.0.0",
+    "@vitest/ui": "^2.0.0",
+    "@vitest/coverage-v8": "^2.0.0",
+    "jsdom": "^25.0.0",
+    "@testing-library/jest-dom": "^6.6.0"
   }
 }
