chore(*): update project build paths and lock file

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,7 +13,10 @@
 # limitations under the License.
 
 packages:
-  - packages/*
+  - packages/angular
+  - packages/core
+  - packages/styles
+  - packages/translations
   - examples/angular
 
 catalogs:
