fix(angular): Fix build issues

--- a/packages/angular/tsconfig.lib.json
+++ b/packages/angular/tsconfig.lib.json
@@ -7,13 +7,15 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
     "baseUrl": ".",
     "paths": {
       "@firebase-ui/core": ["../core/src/index.ts"],
       "@firebase-ui/translations": ["../translations/src/index.ts"],
       "@firebase-ui/styles": ["../styles/src/index.ts"]
     }
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   },
   "exclude": ["**/*.spec.ts"]
 }
