--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -4,6 +4,7 @@
   "files": [
     "dist"
   ],
+  "type": "module",
   "main": "./dist/fesm2022/firebase-ui-angular.mjs",
   "module": "./dist/fesm2022/firebase-ui-angular.mjs",
   "typings": "./dist/index.d.ts",
@@ -29,7 +30,7 @@
     "@firebase-ui/translations": "workspace:*"
   },
   "dependencies": {
-    "@tanstack/angular-form": "^1.21.1",
+    "@tanstack/angular-form": "^1.23.1",
     "@firebase-ui/styles": "workspace:*",
     "tslib": "^2.8.1",
     "nanostores": "catalog:",
