feat(*): Add brand logos / styling

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,10 +11,12 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
-    }
+    },
+    "./brands/*": "./brands/*"
   },
   "files": [
-    "dist"
+    "dist",
+    "brands"
   ],
   "scripts": {
     "prepare": "pnpm run build",
