--- a/packages/angular/angular.json
+++ b/packages/angular/angular.json
@@ -1,7 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
   "projects": {
     "firebase-ui-angular": {
       "projectType": "library",
@@ -9,6 +8,9 @@
       "sourceRoot": "src",
       "prefix": "lib",
       "architect": {
+        "test": {
+          "builder": "@analogjs/vitest-angular:test"
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
