--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -27,35 +27,35 @@
     "@angular/fire": "catalog:peerDependencies"
   },
   "dependencies": {
-    "@tanstack/angular-form": "^1.23.1",
     "@firebase-ui/core": "workspace:*",
     "@firebase-ui/styles": "workspace:*",
-    "tslib": "^2.8.1",
-    "nanostores": "catalog:"
+    "@tanstack/angular-form": "^1.23.1",
+    "nanostores": "catalog:",
+    "tslib": "^2.8.1"
   },
   "sideEffects": false,
   "devDependencies": {
-    "@angular/core": "catalog:",
-    "@angular/common": "catalog:",
-    "@angular/forms": "catalog:",
-    "@angular/router": "catalog:",
-    "@angular/fire": "catalog:",
+    "@analogjs/vitest-angular": "^1.21.1",
     "@angular-devkit/build-angular": "catalog:",
     "@angular/cli": "catalog:",
+    "@angular/common": "catalog:",
     "@angular/compiler": "catalog:",
     "@angular/compiler-cli": "catalog:",
+    "@angular/core": "catalog:",
+    "@angular/fire": "catalog:",
+    "@angular/forms": "catalog:",
     "@angular/platform-browser": "catalog:",
     "@angular/platform-browser-dynamic": "catalog:",
-    "firebase": "catalog:",
+    "@angular/router": "catalog:",
+    "@testing-library/angular": "^18.0.0",
+    "@testing-library/jest-dom": "^6.6.0",
     "@types/node": "catalog:",
-    "zone.js": "catalog:",
+    "firebase": "catalog:",
+    "jsdom": "^25.0.0",
     "ng-packagr": "^20.0.0",
     "rxjs": "catalog:",
     "typescript": "catalog:",
-    "vitest": "^2.0.0",
-    "@vitest/ui": "^2.0.0",
-    "@vitest/coverage-v8": "^2.0.0",
-    "jsdom": "^25.0.0",
-    "@testing-library/jest-dom": "^6.6.0"
+    "vitest": "catalog:",
+    "zone.js": "catalog:"
   }
 }
