feat(react): Support display name field when behavior is enabled

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -7,7 +7,8 @@
       "~/*": ["./src/*"],
       "~/tests/*": ["./tests/*"],
       "@firebase-ui/core": ["../core/src/index.ts"],
-      "@firebase-ui/styles": ["../styles/src/index.ts"]
+      "@firebase-ui/styles": ["../styles/src/index.ts"],
+      "@firebase-ui/translations": ["../translations/src/index.ts"]
     }
   },
   "include": ["src", "eslint.config.js", "vite.config.ts", "setup-test.ts"]
