--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "build:translations": "pnpm --filter=@firebase-ui/translations run build",
     "build:react": "pnpm --filter=@firebase-ui/react run build",
     "build:angular": "pnpm --filter=@firebase-ui/angular run build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "lint:check": "eslint",
+    "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
+    "format:write": "prettier --write **/{src,tests}/**/*.{ts,tsx}",
     "test": "pnpm run test:core && pnpm run test:react && pnpm run test:angular && pnpm run test:translations && pnpm run test:styles",
     "test:core": "pnpm --filter=@firebase-ui/core run test",
     "test:react": "pnpm --filter=@firebase-ui/react run test",
@@ -37,19 +36,14 @@
     "release:all": "pnpm i && pnpm run release:core && pnpm run release:translations && pnpm run release:react && pnpm run release:styles && pnpm run release:angular"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "@eslint/css": "^0.11.1",
+    "@eslint/js": "^9.35.0",
+    "eslint": "catalog:",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.4.0",
     "prettier": "^3.1.1",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11",
-    "vite-plugin-dts": "^4.2.3",
-    "vite-tsconfig-paths": "^5.0.1"
+    "typescript-eslint": "^8.45.0"
   }
 }
