--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,7 +60,6 @@
     "tsup": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:",
-    "vitest-tsconfig-paths": "catalog:"
+    "vitest": "catalog:"
   }
 }
