--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -64,7 +64,6 @@
     "tsup": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:",
-    "vitest-tsconfig-paths": "catalog:"
+    "vitest": "catalog:"
   }
 }
