--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
         
-      - name: Run ESLint
+      - name: Run ESLint check
         run: pnpm run lint:check
         
       - name: Run Prettier check
