chore: Stop duplicate job runs

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,10 +3,8 @@ name: Lint and Format Check
 on:
   push:
     branches:
-      - "**"
+      - "@invertase/v7-development"
   pull_request:
-    branches:
-      - "**"
 
 jobs:
   lint:
