--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,10 +3,8 @@ name: Test
 on:
   push:
     branches:
-      - "**"
+      - "@invertase/v7-development"
   pull_request:
-    branches:
-      - "**"
 
 jobs:
 
