--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,6 +49,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@firebase-ui/translations": "workspace:*",
     "@testing-library/jest-dom": "catalog:",
     "@testing-library/react": "catalog:",
     "@types/jsdom": "catalog:",
