chore: Add logo build to build script

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "prepare": "pnpm run build",
-    "build": "tsup",
+    "build": "tsup && pnpm run build:logos",
     "build:local": "pnpm run build && pnpm pack",
     "build:logos": "pnpm dlx @svgr/cli --icon --typescript --no-index --jsx-runtime automatic --out-dir src/components/logos ../core/brands",
     "dev": "tsup --watch",
