feat(shadcn): Add basic sign-in-auth-form example

--- a/packages/shadcn/tsconfig.json
+++ b/packages/shadcn/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
+    "types": ["vite/client"],
     "paths": {
       "@/*": ["./src/*"],
       "@firebase-ui/core": ["../core/src/index.ts"],
