--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -34,9 +34,9 @@ catalog:
   tsup: ^8.5.0
   typescript: ^5.9.2
   vite: ^7.1.5
-  vitest: ^3.2.4
   vite-tsconfig-paths: ^5.1.4
-  zod: ^4.1.9
+  vitest: ^3.2.4
+  zod: 4.1.11
   zone.js: ^0.15.0
 
 catalogs:
