--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -17,15 +17,23 @@
     "@vitejs/plugin-react": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "shadcn": "2.9.3-canary.0",
     "tailwindcss": "catalog:",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
     "vite": "catalog:"
   },
   "dependencies": {
+    "@firebase-ui/react": "workspace:*",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
-    "tailwind-merge": "^3.3.1"
+    "react-hook-form": "^7.64.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "catalog:"
   }
 }
