--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsx build.ts https://ui.firebase.com",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -21,6 +21,7 @@
     "tailwindcss": "catalog:",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
+    "tsx": "^4.20.6",
     "vite": "catalog:"
   },
   "dependencies": {
