test(shadcn): Add tests

--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "build:translations": "pnpm --filter=@firebase-ui/translations run build",
     "build:react": "pnpm --filter=@firebase-ui/react run build",
     "build:angular": "pnpm --filter=@firebase-ui/angular run build",
+    "build:shadcn": "pnpm --filter=@firebase-ui/shadcn run build",
     "lint:check": "eslint",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
     "format:write": "prettier --write **/{src,tests}/**/*.{ts,tsx}",
-    "test": "pnpm run test:core && pnpm run test:react && pnpm run test:translations && pnpm run test:styles",
+    "test": "pnpm run test:core && pnpm run test:react && pnpm run test:translations && pnpm run test:styles && pnpm run test:shadcn",
     "test:core": "pnpm --filter=@firebase-ui/core run test",
     "test:react": "pnpm --filter=@firebase-ui/react run test",
     "test:angular": "pnpm --filter=@firebase-ui/angular run test",
     "test:translations": "pnpm --filter=@firebase-ui/translations run test",
     "test:styles": "pnpm --filter=@firebase-ui/styles run test",
+    "test:shadcn": "pnpm --filter=@firebase-ui/shadcn run test",
     "test:watch": "pnpm run test:core:watch & pnpm run test:react:watch & pnpm run test:angular:watch",
     "test:core:watch": "pnpm --filter=@firebase-ui/core run test:unit:watch",
     "test:react:watch": "pnpm --filter=@firebase-ui/react run test:unit:watch",
