--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -5,16 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "registry:build": "tsx build.ts https://ui.firebase.com",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "tsx build.ts https://ui.firebase.com",
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "catalog:",
+    "@testing-library/react": "catalog:",
+    "@firebase-ui/translations": "workspace:*",
     "@tailwindcss/vite": "^4.1.14",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "firebase": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "shadcn": "2.9.3-canary.0",
@@ -22,9 +26,11 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
     "tsx": "^4.20.6",
-    "vite": "catalog:"
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
   "dependencies": {
+    "@firebase-ui/core": "workspace:*",
     "@firebase-ui/react": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
