--- a/packages/shadcn/tsconfig.json
+++ b/packages/shadcn/tsconfig.json
@@ -4,13 +4,11 @@
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
     "types": ["vite/client"],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@firebase-ui/core": ["../core/src/index.ts"],
-      "@firebase-ui/react": ["../react/src/index.ts"],
-      "@firebase-ui/translations": ["../translations/src/index.ts"],
-      "@firebase-ui/styles": ["../styles/src/index.ts"]
+      "@/tests/*": ["./tests/*"]
     }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "tests", "vite.config.ts", "setup-test.ts"]
 }
