--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -10,24 +10,27 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@firebase-ui/translations": "workspace:*",
+    "@tailwindcss/vite": "catalog:",
     "@testing-library/jest-dom": "catalog:",
     "@testing-library/react": "catalog:",
-    "@firebase-ui/translations": "workspace:*",
-    "@tailwindcss/vite": "^4.1.14",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@types/yargs-parser": "^21.0.3",
     "@vitejs/plugin-react": "catalog:",
     "firebase": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
     "shadcn": "2.9.3-canary.0",
     "tailwindcss": "catalog:",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
-    "tsx": "^4.20.6",
     "vite": "catalog:",
-    "vitest": "catalog:"
+    "vite-plugin-run": "^0.6.1",
+    "vitest": "catalog:",
+    "yargs-parser": "^22.0.0"
   },
   "dependencies": {
     "@firebase-ui/core": "workspace:*",
