--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalog:
   '@angular/platform-browser': ^20.2.2
   '@angular/platform-browser-dynamic': ^20.2.2
   '@angular/router': ^20.2.2
+  '@tailwindcss/vite': ^4.1.14
   '@testing-library/jest-dom': ^6.8.0
   '@testing-library/react': ^16.3.0
   '@types/jsdom': ^21.1.7
