chore: Bump deps

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -35,7 +35,7 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@analogjs/vitest-angular": "^1.21.1",
+    "@analogjs/vitest-angular": "^1.21.2",
     "@angular-devkit/build-angular": "catalog:",
     "@angular/cli": "catalog:",
     "@angular/common": "catalog:",
@@ -47,8 +47,8 @@
     "@angular/platform-browser": "catalog:",
     "@angular/platform-browser-dynamic": "catalog:",
     "@angular/router": "catalog:",
-    "@testing-library/angular": "^18.0.0",
-    "@testing-library/jest-dom": "^6.6.0",
+    "@testing-library/angular": "^18.1.0",
+    "@testing-library/jest-dom": "catalog:",
     "@types/node": "catalog:",
     "firebase": "catalog:",
     "jsdom": "^25.0.0",
