--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@eslint/css": "^0.11.1",
     "@eslint/js": "^9.35.0",
+    "angular-eslint": "^20.3.0",
     "eslint": "catalog:",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
