refactor: Migrate to Jest (from Vitest)

--- a/packages/angular/tsconfig.json
+++ b/packages/angular/tsconfig.json
@@ -13,5 +13,5 @@
       "@firebase-ui/styles": ["../styles/src/index.ts"]
     }
   },
-  "include": ["src", "tests", "eslint.config.js", "vite.config.ts", "setup-test.ts"]
+  "include": ["src", "tests", "jest.config.ts", "setup-test.ts"]
 }
