--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -35,7 +35,6 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@analogjs/vitest-angular": "^1.21.2",
     "@angular-devkit/build-angular": "catalog:",
     "@angular/cli": "catalog:",
     "@angular/common": "catalog:",
@@ -49,13 +48,17 @@
     "@angular/router": "catalog:",
     "@testing-library/angular": "^18.1.0",
     "@testing-library/jest-dom": "catalog:",
+    "@types/jest": "^30.0.0",
     "@types/node": "catalog:",
     "firebase": "catalog:",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-preset-angular": "^15.0.2",
     "jsdom": "^25.0.0",
     "ng-packagr": "^20.0.0",
     "rxjs": "catalog:",
+    "ts-node": "^10.9.2",
     "typescript": "catalog:",
-    "vitest": "catalog:",
     "zone.js": "catalog:"
   }
 }
