feat(shadcn): CountrySelector component

--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -37,6 +37,7 @@
     "@firebase-ui/react": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
