--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:react": "pnpm --filter=@firebase-ui/react run build",
     "build:angular": "pnpm --filter=@firebase-ui/angular run build",
     "lint:check": "eslint",
+    "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
     "format:write": "prettier --write **/{src,tests}/**/*.{ts,tsx}",
     "test": "pnpm run test:core && pnpm run test:react && pnpm run test:translations && pnpm run test:styles",
