--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "prepare": "echo 'Skipping prepare for angular'; exit 0",
-    "build": "ng-packagr -p ng-package.json",
+    "build": "pnpm run build:logos && ng-packagr -p ng-package.json",
+    "build:logos": "tsx generate-logos.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ci": "vitest run --coverage",
@@ -58,7 +59,9 @@
     "ng-packagr": "^20.0.0",
     "rxjs": "catalog:",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "catalog:",
+    "whatwg-fetch": "^3.6.20",
     "zone.js": "catalog:"
   }
 }
