--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -59,6 +59,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "catalog:",
+    "whatwg-fetch": "^3.6.20",
     "zod": "catalog:",
     "zone.js": "catalog:"
   }
