--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -44,7 +44,7 @@
     "@firebase-ui/styles": "workspace:*",
     "@nanostores/react": "^1.0.0",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-form": "^1.20.0",
+    "@tanstack/react-form": "1.20.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.0.1",
     "zod": "catalog:"
