--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -15,7 +15,7 @@
     }
   },
   "scripts": {
-    "prepare": "echo 'Skipping prepare for angular'; exit 0",
+    "prepare": "pnpm run build",
     "build": "pnpm run build:logos && ng-packagr -p ng-package.json",
     "build:logos": "tsx generate-logos.ts",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
