fix: align React and React DOM versions to 19.1.1
- Fixed version mismatch between react (19.1.1) and react-dom (19.2.0)
- Both packages now use exact version 19.1.1 to prevent React compatibility errors
- Resolves issue where React example app failed to start due to version mismatch

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -18,8 +18,8 @@
     "@firebase-ui/styles": "workspace:*",
     "@firebase-ui/translations": "workspace:*",
     "firebase": "^11.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-router": "^7.5.1"
   },
   "devDependencies": {
