--- a/examples/shadcn/package.json
+++ b/examples/shadcn/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "shadcn:add-all": "tsx add-all.ts"
   },
   "dependencies": {
     "@firebase-ui/core": "workspace:*",
@@ -64,10 +65,13 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@types/yargs-parser": "^21.0.3",
     "@vitejs/plugin-react": "catalog:",
     "tailwindcss": "catalog:",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
-    "vite": "catalog:"
+    "vite": "catalog:",
+    "yargs-parser": "^22.0.0"
   }
 }
