--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -22,14 +22,15 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "@vitejs/plugin-react": "catalog:",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.1",
-    "tailwindcss": "^4.1.4"
+    "prettier": "^3.1.1",
+    "vite": "catalog:",
+    "tailwindcss": "catalog:"
   }
 }
