--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -15,8 +15,8 @@
     "@invertase/firebaseui-styles": "^0.0.1",
     "@invertase/firebaseui-translations": "^0.0.1",
     "firebase": "^11.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-router": "^7.5.1"
   },
   "devDependencies": {
