chore(*): add Firebase deploy scripts for example apps

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build:translations": "pnpm --filter=@invertase/firebaseui-translations run build",
     "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
     "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
+    "deploy:angular": "cd examples/angular && pnpm run build && firebase deploy --only hosting:fir-ui-2025-angular",
+    "deploy:nextjs": "cd examples/nextjs && pnpm run build && firebase deploy --only hosting:fir-ui-2025-nextjs",
+    "deploy:react": "cd examples/react && pnpm run build && firebase deploy --only hosting:fir-ui-2025-react",
+    "deploy:all": "pnpm run deploy:angular && pnpm run deploy:nextjs && pnpm run deploy:react",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check **/{src,tests}/**/*.{ts,tsx}",
