chore(react): add Firebase hosting site name to firebase.json

--- a/examples/react/firebase.json
+++ b/examples/react/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "site": "fir-ui-2025-react",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
