chore(*): update package names to @invertase namespace

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@firebase-ui/react",
+  "name": "@invertase/firebaseui-react",
   "version": "0.0.1",
   "type": "module",
   "main": "./dist/index.cjs",
