--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@firebase-ui/styles",
+  "name": "@invertase/firebaseui-styles",
   "version": "0.0.1",
   "type": "module",
   "main": "./dist/index.cjs",
