--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -26,8 +26,8 @@
     "@angular/fire": "catalog:peerDependencies"
   },
   "dependencies": {
-    "@firebase-ui/core": "workspace:*",
-    "@firebase-ui/styles": "workspace:*",
+    "@invertase/firebaseui-core": "workspace:*",
+    "@invertase/firebaseui-styles": "workspace:*",
     "@tanstack/angular-form": "^1.23.1",
     "nanostores": "catalog:",
     "tslib": "^2.8.1"
