--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -6,9 +6,9 @@
     "paths": {
       "~/*": ["./src/*"],
       "~/tests/*": ["./tests/*"],
-      "@firebase-ui/core": ["../core/src/index.ts"],
-      "@firebase-ui/translations": ["../translations/src/index.ts"],
-      "@firebase-ui/styles": ["../styles/src/index.ts"]
+      "@invertase/firebaseui-core": ["../core/src/index.ts"],
+      "@invertase/firebaseui-translations": ["../translations/src/index.ts"],
+      "@invertase/firebaseui-styles": ["../styles/src/index.ts"]
     }
   },
   "include": ["src", "vite.config.ts", "setup-test.ts"]
