--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -31,10 +31,10 @@
     "@angular/platform-server": "^20.2.2",
     "@angular/router": "^20.2.2",
     "@angular/ssr": "^20.2.2",
-    "@invertase/firebaseui-angular": "^0.0.3",
-    "@invertase/firebaseui-core": "^0.0.1",
-    "@invertase/firebaseui-styles": "^0.0.1",
-    "@invertase/firebaseui-translations": "^0.0.1",
+    "@invertase/firebaseui-angular": "0.0.3",
+    "@invertase/firebaseui-core": "0.0.4",
+    "@invertase/firebaseui-styles": "0.0.3",
+    "@invertase/firebaseui-translations": "0.0.4",
     "@tailwindcss/postcss": "^4.0.6",
     "express": "^4.18.2",
     "postcss": "^8.5.2",
