--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "publish:tags:angular": "pnpm --filter=@invertase/firebaseui-angular run publish:tags",
     "publish:tags:styles": "pnpm --filter=@invertase/firebaseui-styles run publish:tags",
     "publish:tags:all": "pnpm i && pnpm run publish:tags:core && pnpm run publish:tags:translations && pnpm run publish:tags:react && pnpm run publish:tags:styles && pnpm run publish:tags:angular",
-    "release:core": "pnpm --filter=@invertase/firebaseui-core run release",
-    "release:translations": "pnpm --filter=@invertase/firebaseui-translations run release",
-    "release:react": "pnpm --filter=@invertase/firebaseui-react run release",
-    "release:angular": "pnpm --filter=@invertase/firebaseui-angular run release",
-    "release:styles": "pnpm --filter=@invertase/firebaseui-styles run release",
-    "release:all": "pnpm i && pnpm run release:core && pnpm run release:translations && pnpm run release:react && pnpm run release:styles && pnpm run release:angular",
     "build:all": "pnpm run build:translations && pnpm run build:core && pnpm run build:styles && pnpm run build:react && pnpm run build:angular",
     "build:styles": "pnpm --filter=@invertase/firebaseui-styles run build",
-    "publish:npm:translations": "cd packages/translations && npm publish --access public",
-    "publish:npm:core": "cd packages/core && npm publish --access public",
-    "publish:npm:styles": "cd packages/styles && npm publish --access public",
-    "publish:npm:react": "cd packages/react && npm publish --access public",
-    "publish:npm:angular": "cd packages/angular && npm publish --access public",
-    "publish:all:npm": "pnpm run build:all && pnpm run publish:npm:translations && pnpm run publish:npm:core && pnpm run publish:npm:styles && pnpm run publish:npm:react && pnpm run publish:npm:angular"
+    "publish:npm:translations": "cd packages/translations && pnpm publish --access public --no-git-checks",
+    "publish:npm:core": "cd packages/core && pnpm publish --access public --no-git-checks",
+    "publish:npm:styles": "cd packages/styles && pnpm publish --access public --no-git-checks",
+    "publish:npm:react": "cd packages/react && pnpm publish --access public --no-git-checks",
+    "publish:npm:angular": "cd packages/angular && pnpm publish --access public --no-git-checks",
+    "publish:all:npm": "pnpm run build:all && pnpm run publish:npm:translations && pnpm run publish:npm:core && pnpm run publish:npm:styles && pnpm run publish:npm:react && pnpm run publish:npm:angular",
+    "release:version:translations": "cd packages/translations && npm version patch",
+    "release:version:core": "cd packages/core && npm version patch",
+    "release:version:styles": "cd packages/styles && npm version patch",
+    "release:version:react": "cd packages/react && npm version patch",
+    "release:version:angular": "cd packages/angular && npm version patch",
+    "release:all": "pnpm run release:version:translations && pnpm run release:version:core && pnpm run release:version:styles && pnpm run release:version:react && pnpm run release:version:angular && pnpm run publish:all:npm"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
