chore(*): added deploy scripts

--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.{ts,html,css,scss}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss}\""
+    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss}\"",
+    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-2025-angular"
   },
   "dependencies": {
     "@angular/animations": "^20.2.2",
