--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build:react": "pnpm --filter=@invertase/firebaseui-react run build",
     "build:angular": "pnpm --filter=@invertase/firebaseui-angular run build",
     "build:shadcn": "pnpm --filter=@invertase/firebaseui-shadcn run build",
+    "deploy": "pnpm --filter react run deploy && pnpm --filter nextjs run deploy && pnpm --filter angular-example run deploy",
+    "deploy:react": "pnpm --filter react run deploy",
+    "deploy:nextjs": "pnpm --filter nextjs run deploy",
+    "deploy:angular": "pnpm --filter angular-example run deploy",
     "shadcn:deploy": "pnpm run build:shadcn && firebase deploy --only hosting:fir-ui-shadcn",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
