--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "deploy": "pnpm run build && firebase deploy --only hosting:fir-ui-2025-nextjs"
   },
   "dependencies": {
     "@invertase/firebaseui-react": "0.0.3",
